--- a/calorie.html
+++ b/calorie.html
@@ -70,7 +70,7 @@
                                 onclick="logIn()">login</button>
                             <button class="btn btn-primary btn-lg bg-success" id="signupBtn" href="#" role="button"
                                 onclick="signUp()">Signup</a>
-                                <button id ="not-user"class="btn btn-primary btn-sm bg-success" onclick="showSignup()"
+                                <button id="not-user" class="btn btn-primary btn-sm bg-success" onclick="showSignup()"
                                     role="button">not a user?
                                     Signup here</button>
                         </form>
@@ -89,8 +89,10 @@
         <form>
             <div id="messageArea1"></div>
             <label for="foodName">Food Name:</label>
-            <input type="text" id="foodName" required>
-
+            <!-- <input type="text" id="foodName" autocomplete="on" required> -->
+            <input type="text" id="foodName" autocomplete="off" oninput="showSuggestions()">
+            <!-- Suggestions container -->
+            <div id="foodSuggestions"></div>
             <label for="mealSelect">Select Meal:</label>
             <select id="mealSelect">
                 <option value="breakfast">Breakfast</option>
