--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
 
     <div class="container pt-5 pb-5">
         <div>
-            <h1>About Project</h1>
+            <h2>About Project</h2>
             <p>This comprehensive web application serves as a powerful tool for nutrition tracking. It boasts user
                 authentication, CRUD functionalities, and dynamic Chart.js visualizations. Users can seamlessly log in,
                 add,
@@ -92,37 +92,48 @@
                 polished
                 and user-friendly UI adapts intelligently based on the user's status, and local storage efficiently
                 manages
-                data storage. The application can be extended with additional features, including a hero section, image
+                data storage. The application is extended with additional features, including a hero section, image
                 links, an FAQ accordion, and a sleek Bootstrap footer. Its versatility makes it an ideal foundation for
                 health and nutrition-focused applications, offering a holistic approach to user engagement and data
-                management.</p>
-        </div>
-        <div class="pt-3">
-            <h1>About US</h1>
-            <p>This comprehensive web application serves as a powerful tool for nutrition tracking. It boasts user
-                authentication, CRUD functionalities, and dynamic Chart.js visualizations. Users can seamlessly log in,
-                add,
-                edit, and delete foods, meals, and plans, with the macronutrient charts updating in real-time. The
-                polished
-                and user-friendly UI adapts intelligently based on the user's status, and local storage efficiently
-                manages
-                data storage. The application can be extended with additional features, including a hero section, image
-                links, an FAQ accordion, and a sleek Bootstrap footer. Its versatility makes it an ideal foundation for
-                health and nutrition-focused applications, offering a holistic approach to user engagement and data
-                management.</p>
-        </div>
+                management. <br>
+                The application leverages JSON data for storing food details, which will be replaced live APIs
+                Nutritionix to enhance data accuracy and coverage. The seamless incorporation of
+                CRUD operations enables users to manage their nutrition plans effectively. The dynamic Chart.js
+                visualizations offer a clear representation of macronutrient intake, empowering users with insights into
+                their dietary habits.<br> <b> Features</b> <br>
+                1.User Authentication:
+                User registration and login functionality.<br>
+                2.CRUD Operations:
 
-        <div class="container p-3">
-            <h3>API data - https://www.nutritionix.com/business/api</h3>
-            <h3> Endpoints - https://trackapi.nutritionix.com/v2/natural/nutrients</h3>
-        </div>
+                Create, read, update, and delete operations for managing foods, meals.<br>
+                3.Nutrition Tracking:
 
-        <div class='container p-3 imgabout'>
-            <img src="./assests/ERD-diagram.png" alt="">
+                Log and track daily food intake with details such as name, quantity, meal, and date.<br>
+                4.Dynamic Chart.js Visualizations:
+
+                Real-time visualizations of macronutrient intake for a comprehensive view of dietary habits using
+                Chartjs<br>
+
+
+            </p>
         </div>
 
 
+        <div class="container p-3 about-links">
+            <p><b>API data</b> - https://www.nutritionix.com/business/api</p>
+            <p> <b>Endpoints</b> - https://trackapi.nutritionix.com/v2/natural/nutrients</p>
+            <p> <b>Github </b> - https://github.com/saikumar7797/Assignment3_DIS</p>
+
+        </div>
+
+        <div class='container p-3 '>
+            <h3>Data model:</h3>
+            <img class="imgabout" src="./assests/ERD-diagram.png" alt="">
+        </div>
+
+        <h3>About us</h3>
         <div class="about-table">
+
             <table>
                 <thead>
                     <tr>
@@ -134,7 +145,9 @@
                     <tr>
                         <td>
                             <p>Jyothi Venkata naga sai kumar maturi</p>
-                            <p>Jmaturi@usf.edu</p>
+
+                            <img src="./assests/sai.jpg" alt="" srcset="">
+                            <p>EmailId : Jmaturi@usf.edu</p>
                         </td>
                         <td>
                             <p>I am Jyothi Venkata naga sai kumar maturi, a master's student at the University of South
@@ -150,7 +163,8 @@
                     <tr>
                         <td>
                             <p>Nikhil Reddy kotwal</p>
-                            <p>nikhilreddykotwal@usf.edu</p>
+                            <img src="./assests/nikhil.jpg" alt="" srcset="">
+                            <p>Email Id : nikhilreddykotwal@usf.edu</p>
 
                         </td>
                         <td>
@@ -164,7 +178,8 @@
                     <tr>
                         <td>
                             <p>Mohammed afeef shaik</p>
-                            <p>mshaik121@usf.edu</p>
+                            <img src="./assests/afeef.jpg" alt="" srcset="">
+                            <p>Email Id : mshaik121@usf.edu</p>
                         </td>
                         <td>
                             <p>I am Mohammed afeef shaik. Currently I am pursuing my masters in Business analytics and
@@ -175,7 +190,8 @@
                     <tr>
                         <td>
                             <p>Tarun velagada</p>
-                            <p>jtarunvelagada@usf.edu</p>
+                            <img src="./assests/tarun.jpg" alt="" srcset="">
+                            <p>Email Id : jtarunvelagada@usf.edu</p>
                         </td>
                         <td>
                             <p>I am Tarun velagada, Majoring in business analytics and information systems. I worked on
